<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>vatterger</groupId>
	<artifactId>orts</artifactId>
	<version>0.0.1</version>

	<properties>
		<mainClass>de.vatterger.game.ClientApplication2D</mainClass>
		<!-- <mainClass>de.vatterger.game.AccountServerApplication</mainClass> -->
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.badlogicgames.gdx</groupId>
			<artifactId>gdx</artifactId>
			<version>1.9.8</version>
		</dependency>

		<dependency>
			<groupId>com.badlogicgames.gdx</groupId>
			<artifactId>gdx-platform</artifactId>
			<version>1.9.8</version>
			<classifier>natives-desktop</classifier>
		</dependency>

		<dependency>
			<groupId>com.badlogicgames.gdx</groupId>
			<artifactId>gdx-backend-headless</artifactId>
			<version>1.9.8</version>
		</dependency>

		<dependency>
			<groupId>com.badlogicgames.gdx</groupId>
			<artifactId>gdx-tools</artifactId>
			<version>1.9.8</version>
		</dependency>

		<dependency>
			<groupId>com.esotericsoftware</groupId>
			<artifactId>kryonet</artifactId>
			<version>2.22.0-RC1</version>
		</dependency>

		<dependency>
			<groupId>com.kotcrab.vis</groupId>
			<artifactId>vis-ui</artifactId>
			<version>1.1.1</version>
		</dependency>

		<dependency>
			<groupId>net.onedaybeard.artemis</groupId>
			<artifactId>artemis-odb</artifactId>
			<version>2.1.0</version>
		</dependency>

		<dependency>
			<groupId>net.onedaybeard.artemis</groupId>
			<artifactId>artemis-odb-weaver</artifactId>
			<version>2.1.0</version>
		</dependency>

		<dependency>
			<groupId>net.onedaybeard.artemis</groupId>
			<artifactId>artemis-odb-maven-plugin</artifactId>
			<version>2.1.0</version>
		</dependency>

		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4</version>
		</dependency>

		<dependency>
			<groupId>org.mindrot</groupId>
			<artifactId>jbcrypt</artifactId>
			<version>0.4</version>
		</dependency>

		<dependency>
    		<groupId>commons-io</groupId>
    		<artifactId>commons-io</artifactId>
			<version>2.6</version>
		</dependency>

		<dependency>
			<groupId>org.scream3r</groupId>
    		<artifactId>jssc</artifactId>
    		<version>2.8.0</version>
		</dependency>

		<!-- hid4java for cross-platform HID USB -->
		<dependency>
			<groupId>org.hid4java</groupId>
			<artifactId>hid4java</artifactId>
			<version>0.5.0</version>
		</dependency>
		
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-base</artifactId>
			<version>11.0.1</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>11.0.1</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>11.0.1</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>11.0.1</version>
			<classifier>linux</classifier>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>11.0.1</version>
			<classifier>win</classifier>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>11.0.1</version>
			<classifier>mac</classifier>
		</dependency>

	</dependencies>

	<build>
		<sourceDirectory>game_src</sourceDirectory>
		<!-- <resources>
			<resource>
				<directory>assets</directory>
			</resource>
		</resources> -->
      
		<plugins>
			
			<plugin>
				<groupId>net.onedaybeard.artemis</groupId>
				<artifactId>artemis-odb-maven-plugin</artifactId>
				<version>2.1.0</version>
				<executions>
					<execution>
						<goals>
							<goal>artemis</goal>
						</goals>
						<configuration>
							<optimizeEntitySystems>true</optimizeEntitySystems>
							<enableArtemisPlugin>false</enableArtemisPlugin>
							<enablePooledWeaving>true</enablePooledWeaving>
							<generateLinkMutators>true</generateLinkMutators>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<outputDirectory>
						${project.build.directory}/release
					</outputDirectory>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib</classpathPrefix>
							<mainClass>
								${mainClass}
							</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/release/lib</outputDirectory>
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>false</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
						</configuration>
					</execution>
				</executions>
			</plugin>
			
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>copy-assets</id>
						<!-- here the phase you need -->
						<phase>package</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<overwrite>false</overwrite>
							<outputDirectory>${project.build.directory}/release/assets</outputDirectory>
							<resources>
								<resource>
									<directory>${basedir}/assets</directory>
									<filtering>false</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			
			<plugin>
				<groupId>com.googlecode.mavennatives</groupId>
				<artifactId>maven-nativedependencies-plugin</artifactId>
				<version>0.0.7</version>
				<executions>
					<execution>
						<id>unpacknatives</id>
						<goals>
							<goal>copy</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>10</release>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>